w00t        2007/02/21 20:28:21 UTC	(20070221-7711)
  Log:
  Add a (long overdue) handler for SAQUIT to stop us 'losing' people in the hash

  Changes:	Modified:
  +11 -0	trunk/modules/protocol/inspircd11.c (File Modified) 


jilles      2007/02/20 23:02:05 UTC	(20070220-7703)
  Log:
  chanban_add(): don't add bans starting with a colon either
  (would break the protocol)
  

  Changes:	Modified:
  +1 -1		trunk/src/channels.c (File Modified) 


jilles      2007/02/20 15:35:01 UTC	(20070220-7701)
  Log:
  inspircd11: don't pass a too high parc to channel_mode().
  

  Changes:	Modified:
  +1 -1		trunk/modules/protocol/inspircd11.c (File Modified) 


jilles      2007/02/19 20:39:37 UTC	(20070219-7699)
  Log:
  Add a line for officeirc to example.conf.
  

  Changes:	Modified:
  +1 -0		trunk/dist/example.conf (File Modified) 


jilles      2007/02/19 17:26:17 UTC	(20070219-7697)
  Log:
  doc/IRCD: unreal with missing U:lines can cause storms like dreamforge
  

  Changes:	Modified:
  +2 -1		trunk/doc/IRCD (File Modified) 


jilles      2007/02/19 17:25:00 UTC	(20070219-7695)
  Log:
  Add a small officeirc section to doc/IRCD.
  

  Changes:	Modified:
  +7 -0		trunk/doc/IRCD (File Modified) 


jilles      2007/02/19 17:16:06 UTC	(20070219-7693)
  Log:
  Add a little information about ircd setup.
  

  Changes:	Modified:
  +9 -4		trunk/INSTALL (File Modified) 


nenolod     2007/02/18 02:27:08 UTC	(20070218-7691)
  Log:
  - officeirc akill support
  

  Changes:	Modified:
  +6 -2		trunk/modules/protocol/officeirc.c (File Modified) 


nenolod     2007/02/18 02:20:03 UTC	(20070218-7689)
  Log:
  - C99 prototypes
  

  Changes:	Modified:
  +12 -20	trunk/src/arc4random.c (File Modified) 


nenolod     2007/02/18 00:47:15 UTC	(20070218-7687)
  Log:
  - add protocol/officeirc.h
  

  Changes:	Modified:
  +25 -0	trunk/include/phandler.h (File Modified) 
  + -		trunk/include/protocol/officeirc.h (File Added) 


jilles      2007/02/17 16:44:25 UTC	(20070217-7685)
  Log: